# vibe-ra

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  LIMITATIONS.md  NOTICE  README.md  pyproject.toml  requirements.txt  setup.sh
docs/: manifesto.md
patches/: openra-port.patch
prompts/: system_prompt.md
vibera/: __init__.py  __main__.py  adviser.py  army_reactors.py  build_order.py  commander.py  config.py  daemon.py  events.py  floating_chat.py  llm_translator.py  openra_client.py  placement.py  predicates.py  reactors.py  snapshot_pump.py  task.py  task_translator.py  validator.py  voice_commander.py  voice_input.py
vibera/prompts/: adviser_prompt.md  commander_prompt.md  task_planner_prompt.md
